--- a/nuxtgo/nuxtbeego/package.json
+++ b/nuxtgo/nuxtbeego/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.11",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "http-proxy": "^1.18.0",
